Add save and load button, functionality for this button in progress

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -1,11 +1,11 @@
 # Button Labels
-backButtonLabel = Recule
-resetButtonLabel = Reset
-startButtonLabel = Début
-saveButtonLabel = Sauver
-loadButtonLabel = Introduire
+backButtonLabel=Recule
+resetButtonLabel=Reset
+startButtonLabel=Début
+saveButtonLabel=Sauver
+loadButtonLabel=Introduire
 
 # Level Labels
-easyLevelLabel = Facile
-mediumLevelLabel = Moyen
-hardLevelLabel = Difficile
+easyLevelLabel=Facile
+mediumLevelLabel=Moyen
+hardLevelLabel=Difficile
