Add save and load button, functionality for this button in progress

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -9,3 +9,9 @@ loadButtonLabel=Introduire
 easyLevelLabel=Facile
 mediumLevelLabel=Moyen
 hardLevelLabel=Difficile
+fileNotFound=Le fichier n'a pas été trouvé!
+loadFile=Fichier de chargement
+saveFile=Enregistrer le fichier
+noFileChosen=Frais choisis!
+readingFile=Erreur de lecture du fichier!
+error=Erreur!
