--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -9,3 +9,11 @@ loadButtonLabel=Wczytaj
 easyLevelLabel=£atwy
 mediumLevelLabel=Œredni
 hardLevelLabel=Trudny
+
+# Error Labels
+fileNotFound=Nie znaleziono pliku!
+loadFile=Wczytaj plik
+saveFile=Zapisz plik
+noFileChosen=Nie wybrano pliku!
+readingFile=B³¹d podczas wczytywania pliku!
+error=B³¹d!
