--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -1,7 +1,7 @@
 # Button Labels
 backButtonLabel=Recule
 resetButtonLabel=Reset
-startButtonLabel=Début
+startButtonLabel=D\uFFFDbut
 saveButtonLabel=Sauver
 loadButtonLabel=Introduire
 
@@ -9,9 +9,11 @@ loadButtonLabel=Introduire
 easyLevelLabel=Facile
 mediumLevelLabel=Moyen
 hardLevelLabel=Difficile
-fileNotFound=Le fichier n'a pas été trouvé!
+fileNotFound=Le fichier n'a pas \uFFFDt\uFFFD trouv\uFFFD!
 loadFile=Fichier de chargement
 saveFile=Enregistrer le fichier
 noFileChosen=Frais choisis!
 readingFile=Erreur de lecture du fichier!
 error=Erreur!
+saveError=\
+Une erreur s'est produite lors de l'enregistrement dans un fichier!
