Resource Budnle and ListResourceBundle added. task 10 done with additional part ^^

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -1,7 +1,7 @@
 # Button Labels
 backButtonLabel=Recule
 resetButtonLabel=Reset
-startButtonLabel=D\uFFFDbut
+startButtonLabel=D\u00E9but
 saveButtonLabel=Sauver
 loadButtonLabel=Introduire
 
@@ -9,11 +9,10 @@ loadButtonLabel=Introduire
 easyLevelLabel=Facile
 mediumLevelLabel=Moyen
 hardLevelLabel=Difficile
-fileNotFound=Le fichier n'a pas \uFFFDt\uFFFD trouv\uFFFD!
+fileNotFound=Le fichier n'a pas \u00E9t\u00E9 trouv\u00E9!
 loadFile=Fichier de chargement
 saveFile=Enregistrer le fichier
 noFileChosen=Frais choisis!
 readingFile=Erreur de lecture du fichier!
 error=Erreur!
-saveError=\
-Une erreur s'est produite lors de l'enregistrement dans un fichier!
+saveError=Une erreur s'est produite lors de l'enregistrement dans un fichier!
