--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -6,8 +6,8 @@ saveButtonLabel=Zapisz
 loadButtonLabel=Wczytaj
 
 # Level Labels
-easyLevelLabel=\uFFFDatwy
-mediumLevelLabel=\uFFFDredni
+easyLevelLabel=\u0141atwy
+mediumLevelLabel=\u015Aredni
 hardLevelLabel=Trudny
 
 # Error Labels
@@ -15,6 +15,6 @@ fileNotFound=Nie znaleziono pliku!
 loadFile=Wczytaj plik
 saveFile=Zapisz plik
 noFileChosen=Nie wybrano pliku!
-readingFile=B\uFFFD\uFFFDd podczas wczytywania pliku!
-error=B\uFFFD\uFFFDd!
+readingFile=B\u0142\u0105d podczas wczytywania pliku!
+error=B\u0142\u0105d!
 saveError=Wyst\u0105pi\u0142 b\u0142\u0105d poczas zapisu do pliku!
