--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -9,6 +9,8 @@ loadButtonLabel=Introduire
 easyLevelLabel=Facile
 mediumLevelLabel=Moyen
 hardLevelLabel=Difficile
+
+# Errors Labels
 fileNotFound=Le fichier n'a pas \u00E9t\u00E9 trouv\u00E9!
 loadFile=Fichier de chargement
 saveFile=Enregistrer le fichier
@@ -16,3 +18,6 @@ noFileChosen=Frais choisis!
 readingFile=Erreur de lecture du fichier!
 error=Erreur!
 saveError=Une erreur s'est produite lors de l'enregistrement dans un fichier!
+
+# Logger Labels
+loadFileLog=Le fichier a \u00E9t\u00E9 charg\u00E9
