--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -18,3 +18,6 @@ noFileChosen=Nie wybrano pliku!
 readingFile=B\u0142\u0105d podczas wczytywania pliku!
 error=B\u0142\u0105d!
 saveError=Wyst\u0105pi\u0142 b\u0142\u0105d poczas zapisu do pliku!
+
+# Logger Labels
+loadFileLog=Wczytano plik: 
