--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -21,3 +21,9 @@ saveError=Une erreur s'est produite lors de l'enregistrement dans un fichier!
 
 # Logger Labels
 loadFileLog=Le fichier a \u00E9t\u00E9 charg\u00E9
+languageChoose=Choisissez la langue
+difficultyChoose=Choisissez la difficult\u00E9
+
+language_en=English
+language_fr=Francais
+language_pl=Polski
