--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -21,3 +21,12 @@ saveError=Wyst\u0105pi\u0142 b\u0142\u0105d poczas zapisu do pliku!
 
 # Logger Labels
 loadFileLog=Wczytano plik: 
+
+# Language Labels
+language_en=English
+language_fr=Francais
+language_pl=Polski
+
+#
+difficultyChoose=Wybierz poziom trudno\u015Bci
+languageChoose=Wybierz j\u0119zyk
