--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -1,2 +1,5 @@
 # Exceptions Labels
 InputMismatch=Le nombre doit \u00EAtre compris entre 1 et 9
+DaoReadException=Je ne peux pas lire les fichiers!
+DaoWriteException=Je ne peux pas \u00E9crire de fichier DAO!
+Null=Null
