Logger bug fixed!

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -27,3 +27,4 @@ difficultyChoose=Choisissez la difficult\u00E9
 language_en=English
 language_fr=Francais
 language_pl=Polski
+savedFileLog=Fichier enregistr\u00E9:
