--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -30,3 +30,4 @@ language_pl=Polski
 #
 difficultyChoose=Wybierz poziom trudno\u015Bci
 languageChoose=Wybierz j\u0119zyk
+savedFileLog=Zapisano plik: 
