--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -3,3 +3,6 @@ InputMismatch=Le nombre doit \u00EAtre compris entre 1 et 9
 DaoReadException=Je ne peux pas lire les fichiers!
 DaoWriteException=Je ne peux pas \u00E9crire de fichier DAO!
 Null=Null
+boardCreate=Tableau cr\u00E9\u00E9
+readFile=Fichier lu!
+writeFile=Fichier enregistr\u00E9!
