--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -28,3 +28,5 @@ language_en=English
 language_fr=Francais
 language_pl=Polski
 savedFileLog=Fichier enregistr\u00E9:
+changeLanguage=Langue modifi\u00E9e! 
+currentLanguage=Langue charg\u00E9e: Francais
