--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -31,3 +31,5 @@ language_pl=Polski
 difficultyChoose=Wybierz poziom trudno\u015Bci
 languageChoose=Wybierz j\u0119zyk
 savedFileLog=Zapisano plik: 
+changeLanguage=Zmieniono j\u0119zyk!
+currentLanguage=Wczytany j\u0119zyk: Polski
