--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -3,3 +3,6 @@ InputMismatch=Numer musi by\u0107 od 1 do 9
 DaoReadException=Nie mog\u0119 odczyta\u0107 pliku!
 DaoWriteException=Nie mog\u0119 wczyta\u0107 pliku dao!
 Null=Null
+boardCreate=Stworzono Sudoku
+readFile=Odczytano plik!
+writeFile=Zapisano plik!
