Task 11 done again!

--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -6,3 +6,4 @@ Null=Null
 boardCreate=Stworzono Sudoku
 readFile=Odczytano plik!
 writeFile=Zapisano plik!
+connected=Po\u0142\u0105czono z baz\u0105 danych!
