--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -6,3 +6,4 @@ Null=Null
 boardCreate=Stworzono Sudoku
 readFile=Odczytano plik!
 writeFile=Zapisano plik!
+noKeyError=Nie znaleziono warto\u015Bci dla klucza: 
