--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -7,3 +7,5 @@ boardCreate=Tableau cr\u00E9\u00E9
 readFile=Fichier lu!
 writeFile=Fichier enregistr\u00E9!
 noKeyError=Impossible de trouver une valeur pour la cl\u00E9:
+connection.success=Connexion r\u00E9ussie \u00E0 la base de donn\u00E9es!
+connection.failure=\u00C9chec de la connexion \u00E0 la base de donn\u00E9es!
