--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -7,3 +7,5 @@ boardCreate=Stworzono Sudoku
 readFile=Odczytano plik!
 writeFile=Zapisano plik!
 noKeyError=Nie znaleziono warto\u015Bci dla klucza:
+connection.success=Uda\u0142o si\u0119 po\u0142\u0105czy\u0107 z baz\u0105 danych!
+connection.failure=Nie uda\u0142o si\u0119 po\u0142\u0105czy\u0107 z baz\u0105 danych!
