Exceptions Resource bundle added new properties, List View and input view added.

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -30,3 +30,4 @@ language_pl=Polski
 savedFileLog=Fichier enregistr\u00E9:
 changeLanguage=Langue modifi\u00E9e! 
 currentLanguage=Langue charg\u00E9e: Francais
+chooseFile=Liste des sudoku
