--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -33,3 +33,4 @@ languageChoose=Wybierz j\u0119zyk
 savedFileLog=Zapisano plik: 
 changeLanguage=Zmieniono j\u0119zyk!
 currentLanguage=Wczytany j\u0119zyk: Polski
+chooseFile=Lista sudoku w bazie
