--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -9,3 +9,6 @@ writeFile=Fichier enregistr\u00E9!
 noKeyError=Impossible de trouver une valeur pour la cl\u00E9:
 connection.success=Connexion r\u00E9ussie \u00E0 la base de donn\u00E9es!
 connection.failure=\u00C9chec de la connexion \u00E0 la base de donn\u00E9es!
+noTableCreated=La base de donn\u00E9es SQL ne peut pas \u00EAtre g\u00E9n\u00E9r\u00E9e!
+loadTable=Les tableaux charg\u00E9s!
+loadSudokuToTable=Les num\u00E9ros ont \u00E9t\u00E9 charg\u00E9s dans la base de donn\u00E9es!
