Load and save controller with bugs :(

--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -12,3 +12,4 @@ connection.failure=\u00C9chec de la connexion \u00E0 la base de donn\u00E9es!
 noTableCreated=La base de donn\u00E9es SQL ne peut pas \u00EAtre g\u00E9n\u00E9r\u00E9e!
 loadTable=Les tableaux charg\u00E9s!
 loadSudokuToTable=Les num\u00E9ros ont \u00E9t\u00E9 charg\u00E9s dans la base de donn\u00E9es!
+io.error=Une erreur s'est produite pendant le fonctionnement des E / S
