--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -31,3 +31,5 @@ savedFileLog=Fichier enregistr\u00E9:
 changeLanguage=Langue modifi\u00E9e! 
 currentLanguage=Langue charg\u00E9e: Francais
 chooseFile=Liste des sudoku
+loadError=Erreur lors du chargement de la base de donn\u00E9es!
+loaded=Donn\u00E9es charg\u00E9es
