--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -12,3 +12,4 @@ connection.failure=Nie uda\u0142o si\u0119 po\u0142\u0105czy\u0107 z baz\u0105 d
 noTableCreated=Nie stworzono tablicy poprawnie!
 loadTable=Wczytano tablice!
 loadSudokuToTable=Wczytano liczby do bazy danych!
+io.error=B\u0142\u0105d przy operacjach wej\u015Bcia i wyj\u015Bcia
