--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -34,3 +34,5 @@ savedFileLog=Zapisano plik:
 changeLanguage=Zmieniono j\u0119zyk!
 currentLanguage=Wczytany j\u0119zyk: Polski
 chooseFile=Lista sudoku w bazie
+loadError=B\u0142\u0105d przy wczytywaniu bazy!
+loaded=Wczytano dane
