powiedz mi dlaczego nie działasz?

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -33,3 +33,5 @@ currentLanguage=Langue charg\u00E9e: Francais
 chooseFile=Liste des sudoku
 loadError=Erreur lors du chargement de la base de donn\u00E9es!
 loaded=Donn\u00E9es charg\u00E9es
+loadBaseButtonLabel=Charger depuis la base SQL
+saveBaseButtonLabel=Enregistrer dans la base de donn\u00E9es
