--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -36,3 +36,5 @@ currentLanguage=Wczytany j\u0119zyk: Polski
 chooseFile=Lista sudoku w bazie
 loadError=B\u0142\u0105d przy wczytywaniu bazy!
 loaded=Wczytano dane
+loadBaseButtonLabel=Wczytaj z bazy
+saveBaseButtonLabel=Zapisz w bazie
