Database works yaaaaayyyyyy

--- a/Model/src/main/resources/Exceptions_pl_PL.properties
+++ b/Model/src/main/resources/Exceptions_pl_PL.properties
@@ -9,7 +9,9 @@ writeFile=Zapisano plik!
 noKeyError=Nie znaleziono warto\u015Bci dla klucza:
 connection.success=Uda\u0142o si\u0119 po\u0142\u0105czy\u0107 z baz\u0105 danych!
 connection.failure=Nie uda\u0142o si\u0119 po\u0142\u0105czy\u0107 z baz\u0105 danych!
-noTableCreated=Nie stworzono tablicy poprawnie!
+noTableCreated=Nie stworzono tablicy poprawnie (prawdopodobnie juz instnieje)!
 loadTable=Wczytano tablice!
 loadSudokuToTable=Wczytano liczby do bazy danych!
 io.error=B\u0142\u0105d przy operacjach wej\u015Bcia i wyj\u015Bcia
+saveSudoku=Sudoku zapisane!
+tableCreated=Utworzono tablice!
