--- a/Model/src/main/resources/Exceptions_fr_FR.properties
+++ b/Model/src/main/resources/Exceptions_fr_FR.properties
@@ -13,3 +13,8 @@ noTableCreated=La base de donn\u00E9es SQL ne peut pas \u00EAtre g\u00E9n\u00E9r
 loadTable=Les tableaux charg\u00E9s!
 loadSudokuToTable=Les num\u00E9ros ont \u00E9t\u00E9 charg\u00E9s dans la base de donn\u00E9es!
 io.error=Une erreur s'est produite pendant le fonctionnement des E / S
+saveSudoku=Sudoku enregistr\u00E9!\
+tableCreated=Conseil cr\u00E9\u00E9!\
+
+tableCreated=Conseil cr\u00E9\u00E9!\
+
