Jak ja nienawidze baz danych!

--- a/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_fr_FR.properties
@@ -2,8 +2,8 @@
 backButtonLabel=Recule
 resetButtonLabel=Reset
 startButtonLabel=D\u00E9but
-saveButtonLabel=Sauver
-loadButtonLabel=Introduire
+saveButtonLabel=Sauver ficher
+loadButtonLabel=Introduire ficher
 
 # Level Labels
 easyLevelLabel=Facile
