--- a/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku_pl_PL.properties
@@ -2,8 +2,8 @@
 backButtonLabel=Cofnij
 resetButtonLabel=Reset
 startButtonLabel=Start
-saveButtonLabel=Zapisz do pliku
-loadButtonLabel=Wczytaj z pliku
+saveButtonLabel=Zapisz
+loadButtonLabel=Wczytaj
 
 # Level Labels
 easyLevelLabel=\u0141atwy
